trunk/Archive2/0f/9fe283af3b9b69/output
main.cpp: In function 'int main()':
main.cpp:43:44: error: conversion from 'std::initializer_list<Foo>' to non-scalar type 'std::array<Foo, 8ul>' requested
         = make_n(make_integer_sequence<n>{});
                                            ^
main (vector) returned: 5
